# rust-backend

./: .gitignore  Cargo.toml  README.md
src/: api.rs  main.rs  middleware.rs  model.rs  patent_data.rs  search_data.rs
