[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"  # Updated to Actix 3
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
mongodb = "1.2"
actix = "0.13"  # Updated to Actix 0.13
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "7.0.2"
dotenv = "0.15.0"
chrono = "0.4"
regex = "1"
futures-util = "0.3"
